add faculty route
